--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,433 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/activity_wordy"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"/>
+    tools:context=".WordyActivity">
+
+    <TextView
+        android:id="@+id/appNameTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:text="Wordy"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <GridLayout
+        android:id="@+id/guessGridLayout"
+        android:layout_width="365dp"
+        android:layout_height="450dp"
+        android:layout_centerInParent="true"
+        android:columnCount="5"
+        android:rowCount="6"
+        android:useDefaultMargins="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498">
+
+
+        <EditText
+            android:id="@+id/et_12"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_17"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="3"
+            android:layout_column="1"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_14"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="2"
+            android:layout_column="3"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_11"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_13"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="2"
+            android:layout_column="2"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_6"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_5"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="0"
+            android:layout_column="4"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_7"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_4"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="0"
+            android:layout_column="3"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_3"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="0"
+            android:layout_column="2"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_2"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_1"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_10"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="1"
+            android:layout_column="4"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_8"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_9"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="1"
+            android:layout_column="3"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_20"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="3"
+            android:layout_column="4"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_16"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_19"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="3"
+            android:layout_column="3"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_23"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="4"
+            android:layout_column="2"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_30"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="5"
+            android:layout_column="4"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_29"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="5"
+            android:layout_column="3"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_26"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="5"
+            android:layout_column="0"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_21"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_22"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="4"
+            android:layout_column="1"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_27"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="5"
+            android:layout_column="1"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_28"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="5"
+            android:layout_column="2"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_25"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="4"
+            android:layout_column="4"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_24"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="4"
+            android:layout_column="3"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_18"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="3"
+            android:layout_column="2"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+
+        <EditText
+            android:id="@+id/et_15"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
+            android:layout_row="2"
+            android:layout_column="4"
+            android:layout_margin="4dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:maxLength="1"
+            android:text=""
+            android:textSize="50sp" />
+    </GridLayout>
+
+
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/guessGridLayout" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
