--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="yellow">#f0d138</color>
+    <color name="green">#87ea6c</color>
+    <color name="gray">#797c7e</color>
 </resources>
