update 11/17 enabling/disabling rows checking word availability clearing buttons

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="yellow">#f0d138</color>
     <color name="green">#87ea6c</color>
     <color name="gray">#797c7e</color>
+    <color name="purple">#800080</color>
 </resources>
